--- a/CSS/style.css
+++ b/CSS/style.css
@@ -72,6 +72,7 @@ div img {
 
 .button {
     border: 1px solid #d3d3d3;
+    border-radius: 30px;
     background: #f3f3f3;
     color: #696969;
     margin-left: 4px;
